k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toye-app
  labels:
    app: toye-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: toye-app
  template:
    metadata:
      labels:
        app: toye-app
    spec:
      containers:
      - name: toye-app
        image: tjesctacy/myapp:latest
        ports:
        - containerPort: 3000
