k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toye-app-service
spec:
  selector:
    app: toye-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
